third_party/move/move-compiler-v2/tests/more-v1/locals/unused_resource_explicit_return.exp

Diagnostics:
warning: This assignment/binding to the left-hand-side variable `r` is unused. Consider removing this assignment/binding, or prefixing the left-hand-side variable with an underscore (e.g., `_r`), or renaming to `_`
  ┌─ tests/more-v1/locals/unused_resource_explicit_return.move:5:17
  │
5 │         let r = R{};
  │                 ^^^

warning: This assignment/binding to the left-hand-side variable `r` is unused. Consider removing this assignment/binding, or prefixing the left-hand-side variable with an underscore (e.g., `_r`), or renaming to `_`
   ┌─ tests/more-v1/locals/unused_resource_explicit_return.move:28:17
   │
28 │         let r = R{};
   │                 ^^^

warning: This assignment/binding to the left-hand-side variable `x` is unused. Consider removing this assignment/binding, or prefixing the left-hand-side variable with an underscore (e.g., `_x`), or renaming to `_`
   ┌─ tests/more-v1/locals/unused_resource_explicit_return.move:33:17
   │
33 │         let x = &R{};
   │                 ^^^^


Diagnostics:
error: local `r` of type `R` does not have the `drop` ability
  ┌─ tests/more-v1/locals/unused_resource_explicit_return.move:5:17
  │
5 │         let r = R{};
  │                 ^^^ implicitly dropped here since it is no longer used

error: local `r` of type `R` does not have the `drop` ability
   ┌─ tests/more-v1/locals/unused_resource_explicit_return.move:11:21
   │
11 │         if (cond) { return () };
   │                     ^^^^^^^^^ implicitly dropped here since it is no longer used

error: local `r` of type `R` does not have the `drop` ability
   ┌─ tests/more-v1/locals/unused_resource_explicit_return.move:17:29
   │
17 │         if (cond) {} else { return () };
   │                             ^^^^^^^^^ implicitly dropped here since it is no longer used

error: local `r` of type `R` does not have the `drop` ability
   ┌─ tests/more-v1/locals/unused_resource_explicit_return.move:23:24
   │
23 │         while (cond) { return () };
   │                        ^^^^^^^^^ implicitly dropped here since it is no longer used

error: local `r` of type `R` does not have the `drop` ability
   ┌─ tests/more-v1/locals/unused_resource_explicit_return.move:28:17
   │
28 │         let r = R{};
   │                 ^^^ implicitly dropped here since it is no longer used

error: value of type `R` does not have the `drop` ability
   ┌─ tests/more-v1/locals/unused_resource_explicit_return.move:33:17
   │
33 │         let x = &R{};
   │                 ^^^^ implicitly dropped here since it is no longer used

error: local `_x` of type `R` does not have the `drop` ability
   ┌─ tests/more-v1/locals/unused_resource_explicit_return.move:38:9
   │
38 │         return ()
   │         ^^^^^^^^^ implicitly dropped here since it is no longer used
